Correct DELETE methods in map and game
